crates/vexor-compiler/tests/golden/error/input/no_export.vx

let r = 10
let c = Circle(r)
